03 Farma - single cow commit

--- a/02-farma-zvirat/index.html
+++ b/02-farma-zvirat/index.html
@@ -15,10 +15,10 @@
 	<h1>Zvířátka na farmě</h1>
 
 	<div class="farma">
-		<!--<div class="zvire">-->
-			<!--<img class="foto" src="obrazky/pes.jpg" alt="Pes">-->
-			<!--<div class="jmeno">pejsek</div>-->
-		<!--</div>-->
+		<!-- <div class="zvire">
+			<img class="foto" src="obrazky/pes.jpg" alt="Pes">
+			<div class="jmeno">pejsek</div>
+		</div> -->
 	</div>
 
 
